# trello-assistant

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  start.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/services/: api.ts
scripts/: ollama-init.sh
src/: config.rs  main.rs
src/models/: card.rs  chat.rs  mod.rs
src/routes/: cards.rs  chat.rs  health.rs  mod.rs  settings.rs  webhook.rs
src/services/: analysis.rs  cache.rs  intent.rs  mod.rs  prompt.rs  trello.rs  webhook.rs
src/services/ai/: gemini.rs  mod.rs  ollama.rs  openai.rs  prompts.rs
